# TDR

./: .gitignore  CMakeLists.txt
tdr/: CMakeLists.txt  tdr_abstract_reader.c  tdr_abstract_reader.h  tdr_abstract_writer.c  tdr_abstract_writer.h  tdr_error_code.h  tdr_hash.c  tdr_hash.h  tdr_string.c  tdr_string.h  tdr_unzip.c  tdr_unzip.h  tdr_util.h
tdr/protocol/: tdr_binary_reader.c  tdr_binary_reader.h  tdr_binary_writer.c  tdr_binary_writer.h  tdr_compact_reader.c  tdr_compact_reader.h  tdr_compact_writer.c  tdr_compact_writer.h  tdr_csv_reader.c  tdr_csv_reader.h  tdr_mybind_reader.c  tdr_mybind_reader.h  tdr_mybind_writer.c  tdr_mybind_writer.h  tdr_xlsx_reader.c  tdr_xlsx_reader.h  tdr_xlsx_reader_l.re  tdr_xlsx_reader_sharedstring_l.re  tdr_xlsx_reader_workbook_l.re  tdr_xlsx_reader_workbook_rels_l.re  tdr_xml_reader.c  tdr_xml_reader.h  tdr_xml_reader_l.re  tdr_xml_reader_scanner.c  tdr_xml_reader_scanner.h  tdr_xml_writer.c  tdr_xml_writer.h
tdrc/: CMakeLists.txt  definition.h  error.h  generator.c  generator.h  globals.c  main.c  parser_y.yy  scanner_l.re  symbols.c  symbols.h
tdrc/generate/: generator_cs.c  generator_cs.h  generator_reader_c.c  generator_reader_c.h  generator_reader_h.c  generator_reader_h.h  generator_sql.c  generator_sql.h  generator_types_h.h  generator_writer_c.c  generator_writer_c.h  generator_writer_h.c  generator_writer_h.h
tdrc/language/: language.h
tdrc/parse/: check.h  parser.h  reduce.h  scanner.c  scanner.h
tdrc/script/: script.c
tutorial/: CMakeLists.txt
tutorial/cmake/Modules/: FindMySQL.cmake  FindTDR.cmake  FindTLibC.cmake
tutorial/tsf4g_example/: tconnd.xml
tutorial/tsf4g_example/etc/: tconnd.toml
tutorial/tsf4g_example/source/: example.c
tutorial/tsf4g_example/tdr/: sql.tdr
